--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
-  "name": "AngularFramewok-Backend",
+  "name": "AngularFrameworkFrontend",
   "version": "0.0.1",
-  "homepage": "https://github.com/WohligTechnology/AngularFramewok-Backend",
+  "homepage": "https://www.wohlig.com",
   "authors": [
-    "sohan1 <shn619@gmail.com>"
+    "tushar@wohlig.com"
   ],
-  "description": "Angular Framework Backend",
+  "description": "Angular Framework Frontend",
   "license": "MIT",
   "ignore": [
     "**/.*",
@@ -20,6 +20,21 @@
     "jquery": "~2.1.4",
     "bootstrap": "~3.3.5",
     "angular-bootstrap": "~0.13.0",
-    "angular-material": "master"
+    "lodash": "~3.10.0",
+    "moment": "~2.10.3",
+    "angular-ui": "~0.4.0",
+    "angular-translate": "~2.7.2",
+    "ui-router": "~0.2.15",
+    "angular-loading-bar": "~0.8.0",
+    "ngInfiniteScroll": "~1.2.1",
+    "angularjs-toaster": "~0.4.15",
+    "ngAutocomplete": "https://github.com/wpalahnuk/ngAutocomplete.git#~1.0.0",
+    "ng-tags-input": "~3.0.0",
+    "ngDialog": "~0.4.0",
+    "angular-social": "https://github.com/esvit/angular-social.git#~1.0.0",
+    "valdr": "~1.1.3",
+    "ui-select": "https://github.com/angular-ui/ui-select.git#~0.12.0",
+    "caman": "~4.1.2",
+    "angular-sanitize": "~1.4.3"
   }
 }
