--- a/bower.json
+++ b/bower.json
@@ -35,6 +35,7 @@
     "valdr": "~1.1.3",
     "ui-select": "https://github.com/angular-ui/ui-select.git#~0.12.0",
     "caman": "~4.1.2",
-    "angular-sanitize": "~1.4.3"
+    "angular-sanitize": "~1.4.3",
+    "angular-momentjs": "~0.2.2"
   }
 }
