--- a/bower.json
+++ b/bower.json
@@ -36,6 +36,7 @@
     "ui-select": "https://github.com/angular-ui/ui-select.git#~0.12.0",
     "caman": "~4.1.2",
     "angular-sanitize": "~1.4.3",
-    "angular-momentjs": "~0.2.2"
+    "angular-momentjs": "~0.2.2",
+    "less": "~2.5.1"
   }
 }
