--- a/bower.json
+++ b/bower.json
@@ -40,6 +40,7 @@
     "less": "~2.5.1",
     "lesshat": "~3.0.2",
     "animate.css": "~3.3.0",
-    "angular-flexslider": "~1.3.2"
+    "angular-flexslider": "~1.3.2",
+    "angular-recaptcha": "~2.2.4"
   }
 }
