--- a/package.json
+++ b/package.json
@@ -5,10 +5,22 @@
   "main": "Gruntfile.js",
   "dependencies": {
     "gulp": "^3.9.0",
+    "gulp-angular-templatecache": "^1.7.0",
+    "gulp-clean": "^0.3.1",
+    "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.2.0",
+    "gulp-copy": "0.0.2",
+    "gulp-gzip": "^1.2.0",
+    "gulp-inline": "0.0.15",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-minify-html": "^1.0.4",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-watch": "^4.3.5"
+    "gulp-tar": "^1.4.0",
+    "gulp-uglify": "^1.4.1",
+    "gulp-watch": "^4.3.5",
+    "run-sequence": "^1.1.4"
   },
   "devDependencies": {},
   "scripts": {
