--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-inline": "0.0.15",
     "gulp-minify-css": "^1.2.1",
     "gulp-minify-html": "^1.0.4",
+    "gulp-open": "^1.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.5.2",
