--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "angularframeworkfrontend",
   "version": "0.0.1",
   "description": "AngularFrameworkFrontend",
-  "main": "Gruntfile.js",
+  "main": "gulpfile.js",
   "dependencies": {
     "gulp": "^3.9.0",
     "gulp-angular-templatecache": "^1.7.0",
