--- a/bower.json
+++ b/bower.json
@@ -22,10 +22,9 @@
     "angular-sanitize": "~1.4.3",
     "angular-ui": "~0.4.0",
     "animate.css": "~3.3.0",
-    "bootstrap": "~3.3.5",
     "bootstrap-sass": "~3.3.5",
     "bourbon": "~4.2.5",
-    "fontawesome": "~4.3.0",
+    "font-awesome": "~4.4.0",
     "jquery": "~2.1.4",
     "lodash": "~3.10.0",
     "ui-router": "~0.2.15",
