--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "gulp-util": "^3.0.6",
     "gulp-wait": "0.0.2",
     "gulp-watch": "^4.3.5",
-    "gulp-zip": "^3.0.2"
+    "gulp-zip": "^3.0.2",
+    "vinyl-ftp": "^0.4.5"
   },
   "devDependencies": {},
   "scripts": {
