--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "AngularFrameworkFrontend",
   "main": "gulpfile.js",
   "dependencies": {
+    "crypto-js": "^3.1.6",
     "gulp": "^3.9.0",
     "gulp-angular-templatecache": "^1.7.0",
     "gulp-clean": "^0.3.1",
