--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,13 @@
 {
   "name": "AngularFrameworkFrontend",
-  "version": "0.1.1",
-  "homepage": "https://www.wohlig.com",
+  "description": "AngularFrameworkFrontend",
+  "main": "gulpfile.js",
   "authors": [
-    "tushar@wohlig.com",
     "chintan@wohlig.com"
   ],
-  "description": "Angular Framework Frontend",
-  "license": "MIT",
+  "license": "ISC",
+  "homepage": "https://github.com/WohligTechnology/AngularFrameworkFrontend",
+  "moduleType": [],
   "ignore": [
     "**/.*",
     "node_modules",
@@ -16,22 +16,17 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.4.8",
     "angular-bootstrap": "~1.1.1",
-    "angular-flexslider": "~1.3.2",
     "angular-recaptcha": "~2.2.4",
-    "angular-sanitize": "~1.4.3",
+    "angular-flexslider": "~1.3.2",
+    "angular-animate": "~1.4.6",
     "angular-ui": "~0.4.0",
     "animate.css": "~3.3.0",
     "bootstrap-sass": "~3.3.5",
     "bourbon": "~4.2.5",
+    "angular-sanitize": "~1.4.3",
     "font-awesome": "~4.4.0",
-    "jquery": "~2.1.4",
     "lodash": "~4.0.0",
-    "ui-router": "~0.2.15",
-    "angular-animate": "~1.4.6"
-  },
-  "resolutions": {
-    "angular": "~1.4.8"
+    "ui-router": "~0.2.15"
   }
 }
