--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
     "font-awesome": "~4.4.0",
     "lodash": "~4.0.0",
     "ui-router": "~0.2.15",
-    "angular": "^1.5.0"
+    "angular": "^1.5.0",
+    "fancyBox": "fancybox#^2.1.5"
   }
 }
