--- a/bower.json
+++ b/bower.json
@@ -30,5 +30,8 @@
     "ui-router": "~0.2.15",
     "angular": "^1.5.0",
     "fancyBox": "fancybox#^2.1.5"
+  },
+  "devDependencies": {
+    "angular-translate": "^2.11.0"
   }
 }
