--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,7 @@
     "bootstrap-sass": "~3.3.5",
     "bourbon": "~4.2.5",
     "angular-sanitize": "~1.4.3",
-    "font-awesome": "~4.4.0",
+    "font-awesome": "^4.6.3",
     "lodash": "~4.0.0",
     "ui-router": "~0.2.15",
     "angular": "^1.5.0",
