--- a/bower.json
+++ b/bower.json
@@ -1,40 +1,39 @@
 {
-  "name": "AngularFrameworkFrontend",
-  "description": "AngularFrameworkFrontend",
-  "main": "gulpfile.js",
-  "authors": [
-    "chintan@wohlig.com"
-  ],
-  "license": "ISC",
-  "homepage": "https://github.com/WohligTechnology/AngularFrameworkFrontend",
-  "moduleType": [],
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
-  "dependencies": {
-    "angular-bootstrap": "^1.2.1",
-    "angular-recaptcha": "~2.2.4",
-    "angular-flexslider": "~1.3.2",
-    "angular-animate": "~1.4.6",
-    "angular-ui": "~0.4.0",
-    "animate.css": "~3.3.0",
-    "bootstrap-sass": "~3.3.5",
-    "bourbon": "~4.2.5",
-    "angular-sanitize": "~1.4.3",
-    "font-awesome": "^4.6.3",
-    "lodash": "~4.0.0",
-    "ui-router": "~0.2.15",
-    "angular": "^1.5.0",
-    "fancyBox": "fancybox#^2.1.5",
-    "angulartics-google-analytics": "^0.1.4",
-    "angular-swiper": "^0.4.0",
-    "smart-app-banner": "https://github.com/kudago/smart-app-banner.git"
-  },
-  "devDependencies": {
-    "angular-translate": "^2.11.0"
-  }
+    "name": "angularframeworkfrontend",
+    "description": "AngularFrameworkFrontend",
+    "main": "gulpfile.js",
+    "authors": [
+        "chintan@wohlig.com"
+    ],
+    "license": "ISC",
+    "homepage": "https://github.com/WohligTechnology/AngularFrameworkFrontend",
+    "moduleType": [],
+    "ignore": [
+        "**/.*",
+        "node_modules",
+        "bower_components",
+        "test",
+        "tests"
+    ],
+    "dependencies": {
+        "angular-bootstrap": "^2.1.3",
+        "angular-recaptcha": "~2.2.4",
+        "angular-flexslider": "~1.3.2",
+        "angular-animate": "^1.5.8",
+        "animate.css": "^3.5.2",
+        "bootstrap-sass": "^3.3.7",
+        "bourbon": "^4.2.7",
+        "angular-sanitize": "^1.5.8",
+        "font-awesome": "^4.6.3",
+        "lodash": "^4.16.0",
+        "angular": "^1.5.8",
+        "fancyBox": "^2.1.5",
+        "angulartics-google-analytics": "^0.2.1",
+        "angular-swiper": "^0.4.0",
+        "smart-app-banner": "^1.3.0",
+        "angular-ui-router": "^0.3.1"
+    },
+    "devDependencies": {
+        "angular-translate": "^2.12.1"
+    }
 }
