--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,6 @@
     "angular-flexslider": "~1.3.2",
     "angular-animate": "^1.5.8",
     "animate.css": "^3.5.2",
-    "bootstrap-sass": "^3.3.7",
     "bourbon": "^4.2.7",
     "angular-sanitize": "^1.5.8",
     "font-awesome": "^4.6.3",
@@ -32,7 +31,8 @@
     "angular-swiper": "^0.4.0",
     "smart-app-banner": "^1.3.0",
     "angular-ui-router": "^0.3.1",
-    "bootstrap": "v4.0.0-alpha.6"
+    "bootstrap": "v4.0.0",
+    "tether": "^1.4.3"
   },
   "devDependencies": {
     "angular-translate": "^2.12.1"
